--- a/datas/config.sample
+++ b/datas/config.sample
@@ -1,13 +1,13 @@
 <?php return [
-    'lat' => 50.60007,
-    'lng' => 5.35756,
+    'lat' => 50.0,
+    'lng' => 5.0,
     'nhc' => 'http://127.0.0.1/',
     'slack' => [
-        'hook' => 'https://hooks.slack.com/services/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',
+        'hook' => 'https://hooks.slack.com/...',
         'options' => [
-            'username' => 'Jarvis',
-            'channel' => '#home',
-            'icon' => ':joystick:',
+            'username' => 'Bot',
+            'channel' => '#general',
+            'icon' => ':computer:',
             'link_names' => true,
             'allow_markdown' => true
         ],
