--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
   ],
   "minimum-stability": "dev",
   "require": {
+    "symfony/yaml": "^3.1",
+    "m1/env": "^2.0",
+    "m1/vars": "^1.1",
     "maknz/slack": "^1.7"
   },
   "autoload": {
