--- a/config/timeline.sample
+++ b/config/timeline.sample
@@ -1,14 +1,34 @@
-<?php return [
-    'sunrise' => [
-    ],
-    '06:30' => [
-    ],
-    'sunset' => [
-    ],
-    '23:00' => [
-    ],
+---
+sunrise:
+    slack_message:
+        message: Night mode off
+    niko_switch:
+        id: 12
+        value: off
 
-    'always' => [
-        ['plugin' => 'slack_message', 'message' => 'Test message'],
-    ]
-];
+# -------------------------------------
+'06:30':
+    days: mon tue wed thu fri
+    slack_message:
+        message: Wake UP !
+    niko_switch:
+        id: 6
+        value: on
+    niko_switch:
+        id: 14
+        value: on
+
+# -------------------------------------
+sunset:
+    niko_switch:
+        id: 4
+        value: on
+
+# -------------------------------------
+midnight:
+    slack_message:
+        message: Night mode on
+    niko_switch:
+        id: 4
+        value: off
+
